@@ -47,6 +47,7 @@ dependencies {
     testCompileOnly 'org.osgi:osgi.core'
     testImplementation "org.assertj:assertj-core:$assertjVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5Version"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
     testImplementation "org.mockito.kotlin:mockito-kotlin:$mockitoKotlinVersion"
     testRuntimeOnly "org.apache.felix:org.apache.felix.framework:$felixVersion"
     testRuntimeOnly "co.paralleluniverse:quasar-core-osgi:$quasarVersion:framework-extension"
@@ -70,6 +71,9 @@ tasks.withType(Test).configureEach {
     // Kryo needs reflective access to these packages.
     jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
             '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
             '--add-opens', 'java.base/java.util=ALL-UNNAMED'
 }
 
